# nbz2

./: .gitignore  README.md  build.gradle.kts  requirements.txt  settings.gradle.kts  setup.cfg
src/nbz2/: setup.py
src/nbz2/core/: core.py  engine.py
src/nbz2/resources/: config.py
test/: test_nbz2.py
tests/: test_nbz2.py
