[metadata]
name = nbz2
version = attr: nbz2.__version__
author = zurdi
author_email = zurdizurdo25@gmail.com
description = NBZ version 2 - WIP
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/zurdi15/nbz2
project_urls =
    repository = https://github.com/zurdi15/nbz2
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3

[options.packages.find]
where = src